assets/sass/newStyles/_main-modal.scss
.b-main-modal {
    top: 0; bottom: 0;
    left: 0; right: 0;
    position: absolute;
    margin: 0;
    padding: 0;

    .main-modal-inner {
        display: flex!important;
        align-items: center;
        justify-content: center;
        top: 0; bottom: 0;
        left: 0; right: 0;
        position: absolute;
        padding: 24px 92px;
        transition: opacity .3s ease-in-out;
        @media (max-width: 1440px) {
            position: static;
            padding: 69px 92px 24px;
            align-items: flex-end;
            justify-content: flex-end;
        }
        @media (max-width: $small) {
            padding: 0 40px;
        }
        @media (max-width: $xsmall) {
            padding: 0;
        }

        .control-btn {
            position: absolute;
            top: 0; bottom: 0;
            cursor: pointer;
            width: 92px;
            display: flex;
            align-items: center;
            outline: 0 none;
            @media (max-width: $small) {
                // width: 40px;
                display: none;
            }
            @media (max-width: $xsmall) {
                display: none;
            }

            &:hover {
                opacity: .6;
            }

            &.prev {
                left: 0;
                padding-left: 30px;
                @media (max-width: $small) {
                    padding-left: 10px;
                }

                img {
                    transform: rotate(-90deg);
                }
            }

            &.next {
                right: 0;
                padding-right: 30px;
                @media (max-width: $small) {
                    padding-right: 10px;
                }

                img {
                    transform: rotate(90deg);
                }
            }

            img {
                max-width: 100%;
            }
        }

        .content {
            max-width: calc(100% - 672px);
            position: relative;
            opacity: 1;
            transition: opacity .3s ease-in-out;
            @media (max-width: 1440px) {
                max-width: calc(100% - 336px);
            }
            @media (max-width: $small) {
                max-width: 100%;
                position: relative;
            }
            @media (max-width: $xsmall) {
                max-width: 100%;
            }

            &.now-hidden {
                opacity: 0;
            }

            img {
                max-width: 100%;
                max-height: 95vh;
                @media (max-width: $small) {
                    max-height: unset;
                    margin: 0;
                    display: block;
                }
                @media (max-width: $xsmall) {
                    width: 100%;
                }
            }

            .project-description {
                position: absolute;
                bottom: 0;
                left: -336px;
                max-width: 300px;
                @media (max-width: $small) {
                    position: static;
                    max-width: 100%;
                    position: absolute;
                    left: 0;
                    width: 100%;
                }
                @media (max-width: $xsmall) {
                    padding: 0 20px;
                }

                .title {
                    font-family: "geometriabold";
                    font-size: 14px;
                    line-height: 17px;
                    color: #12110b;
                    margin-bottom: 5px;
                    @media (max-width: $xsmall) {
                        padding-right: 30px;
                        position: relative;
                        cursor: pointer;
                    }

                    &:after {
                        @media (max-width: $xsmall) {
                            content: '';
                            width: 20px;
                            height: 20px;
                            background: url(../../images/project/plus.svg) no-repeat center;
                            background-size: 100% auto;
                            position: absolute;
                            right: 0;
                            top: 50%;
                            margin-top: -10px;
                        }
                    }

                    &.open {

                        &:after {
                            @media (max-width: $xsmall) {
                                background: url(../../images/project/minus.svg) no-repeat center;
                            }
                        }
                    }
                }

                .author, .info, .project-name {
                    font-size: 14px;
                    line-height: 17px;
                    color: #12110b;
                    margin-bottom: 12px;
                }

                .project-name {
                    margin-bottom: 20px;

                    a {
                        color: #12110b;
                    }
                }

                .project-social {
                    list-style: none;
                    padding: 0;
                    margin: 0;

                    li {
                        display: inline-block;
                        padding: 0;

                        & + li {
                            padding-left: 1.25em;
                        }

                        a {
                            width: 27px;
                            height: 27px;
                            display: inline-block;
                            background-repeat: no-repeat;
                            cursor: pointer;
                        }
                    }

                    .telegram {
                        a {background-image: url(../../images/icon/t-b-1.svg);
                            &:hover {background-image: url(../../images/icon/t-b-2.svg);}
                        }
                    }

                    .insta {
                        a {background-image: url(../../images/icon/in-b-1.svg);
                            &:hover {background-image: url(../../images/icon/in-b-2.svg);}
                        }
                    }

                    .vk {
                        a {background-image: url(../../images/icon/vk-b-1.svg);
                            &:hover {background-image: url(../../images/icon/vk-b-2.svg);}
                        }
                    }

                    .fb {
                        a {background-image: url(../../images/icon/f-b-1.svg);
                            &:hover {background-image: url(../../images/icon/f-b-2.svg);}
                        }
                    }
                }

                .expand {
                    @media (max-width: $xsmall) {
                        padding-top: 6px;
                        max-height: 0;
                        overflow: hidden;
                        transition: max-height 0.3s ease-in-out;
                    }
                }
                .expand.open {
                    @media (max-width: $xsmall) {
                        max-height: 350px;
                    }
                }
            }
        }
    }

    .fancybox-close-small {
        width: 28px;
        height: 28px;
        outline: 0 none;
        background: url(../../images/project/x.svg) no-repeat;
        background-size: 100%;
        top: 30px;
        right: 34px;
        position: absolute;
        cursor: pointer;
        box-shadow: none;
        z-index: 999;
        @media (max-width: $small) {
            width: 18px;
            height: 18px;
            top: 40px;
            right: 40px;
        }
        @media (max-width: $xsmall) {
            width: 18px;
            height: 18px;
            top: 20px;
            right: 20px;
        }

        &:after {
            display: none;
        }
    }

    // .close-modal {
    //     width: 28px;
    //     height: 28px;
    //     outline: 0 none;
    //     background: url(../../images/project/x.svg) no-repeat;
    //     background-size: 100%;
    //     top: 30px;
    //     right: 57px;
    //     position: absolute;
    //     cursor: pointer;
    //     @media (max-width: $xsmall) {
    //         width: 18px;
    //         height: 18px;
    //         top: 20px;
    //         right: 20px;
    //     }
    // }

    // &.first {

    //     .main-modal-inner {

    //         .control-btn {

    //             &.prev {
    //                 display: none;
    //             }
    //         }
    //     }
    // }

    // &.last {

    //     .main-modal-inner {

    //         .control-btn {

    //             &.next {
    //                 display: none;
    //             }
    //         }
    //     }
    // }
}

.fancybox-is-open {

    .b-main-modal {
        @media (max-width: $small) {
            display: flex!important;
            align-items: center;
        }
    }
}

